# cut-optimizer-2d

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: optimizer.rs
src/: guillotine.rs  lib.rs  maxrects.rs  tests.rs
src/genetic/: mod.rs  population.rs  test.rs  unit.rs
